@@ -1,12 +1,11 @@
 package ru.job4j.collection;
 
+import java.util.ArrayList;
+import java.util.List;
+
 import org.hamcrest.Matchers;
 import org.junit.Assert;
 import org.junit.Test;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
 
 public class ConvertListTest {
 
@@ -15,7 +14,7 @@ public class ConvertListTest {
         List<int[]> in = new ArrayList<>();
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
+        List<Integer> expect = List.of(1, 2, 3);
         Assert.assertThat(ConvertList.convert(in), Matchers.is(expect));
     }
 
@@ -25,7 +24,7 @@ public class ConvertListTest {
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
         in.add(new int[] {4, 5, 6});
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6);
         Assert.assertThat(ConvertList.convert(in), Matchers.is(expect));
     }
 
@@ -36,7 +35,7 @@ public class ConvertListTest {
         in.add(new int[] {2, 3});
         in.add(new int[] {4, 5, 6});
         in.add(new int[] {7, 8, 9, 10});
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
         Assert.assertThat(ConvertList.convert(in), Matchers.is(expect));
     }
 
