@@ -1,13 +1,13 @@
 package ru.job4j.collection.task;
 
-import org.hamcrest.Matchers;
-import org.junit.Assert;
-import org.junit.Test;
-
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+
+import org.hamcrest.Matchers;
+import org.junit.Assert;
+import org.junit.Test;
 
 public class FullSearchTest {
 
@@ -18,7 +18,7 @@ public class FullSearchTest {
                 new Task("2", "Second desc"),
                 new Task("1", "First desc")
         );
-        Set<String> expected = new HashSet<>(Arrays.asList("1", "2"));
+        Set<String> expected = new HashSet<>(List.of("1", "2"));
         Assert.assertThat(FullSearch.extractNumber(tasks), Matchers.is(expected));
     }
 
